k8s/manifests-5f79a7/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-5f79a7
  namespace: journee
  labels:
    app: journee-5f79a7
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-5f79a7
  template:
    metadata:
      labels:
        app: journee-5f79a7
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-5f79a7
          image: gcr.io/my-docker-471807/journee:5f79a7-35438f
          ports:
            - containerPort: 3000
