k8s/manifests-5f79a7/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-5f79a7
  namespace: journee
spec:
  selector:
    app: journee-5f79a7
  ports:
    - port: 80
      targetPort: 3000
